arquivo css adicionado

--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-    <a href="subpasta/meu-site.html" target="_blank">ficar na mesma pagina</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Meu Index</title>
+    <link:css rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>
+     Olá, bem vindo ao meu site   
+    </h1>
+    <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias doloremque, porro ducimus voluptatem non ratione, inventore laudantium quasi quas sapiente sunt ipsam ea quo error minima facere animi magni dolor.
+    </p>
+</body>
+</html>
